syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

// Java代码生成选项
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "UserSystemsProto";

import "dnf/v1/common.proto";
import "dnf/v1/option_types.proto";

// 用户系统消息类型
message RES_TUTORIAL_SAVE {
  int32 error = 1;
  int32 tutorialId = 2;
  bool completed = 3;
}

message RES_USE_COIN {
  int32 error = 1;
  int64 coinAmount = 2;
  int64 remainingCoin = 3;
}

message RES_TOWER_INFO {
  int32 error = 1;
  int32 towerId = 2;
  int32 currentFloor = 3;
  int32 maxFloor = 4;
}

message RES_START_BOARD_GAME {
  int32 error = 1;
  int32 gameId = 2;
  string gameName = 3;
  int32 players = 4;
}

message RES_TARGET_USER_DETAIL_INFO {
  int32 error = 1;
  int64 userId = 2;
  string userName = 3;
  int32 level = 4;
  int32 job = 5;
  int64 guildId = 6;
  string guildName = 7;
}
